correction of vacancies List initialisation.